config/onestop-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
        - name: springboot
          image: 0075841/onestop-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: springboot
spec:
  type: ClusterIP  # Specify the service type (ClusterIP is default)
  ports:
    - port: 51300
      targetPort: 8080  # Map the service port to the container port
  selector:
    app: springboot
