config/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: onestop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:13
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-storage
              subPath: pgdata        # Optional: This can help manage data more cleanly.
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: onestop           # Specify the namespace for the service as well.
spec:
  ports:
    - port: 5432
      targetPort: 5432          # Make sure to specify the targetPort.
  selector:
    app: postgres
  type: ClusterIP             # Specify the service type if not defaulting to ClusterIP.
