config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-ingress
  namespace: onestop
spec:
  rules:
    - host: onestop.online # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot
                port:
                  number: 51300 # Same port as defined in the Service
